--- a/css/login.css
+++ b/css/login.css
@@ -18,7 +18,7 @@ main {
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
-  background-color: #92C5FC;
+  background-color: #51a1a7;
   padding: 2rem;
   display: flex;
   align-items: center;
